--- a/Maple.Ghostmon/Maple.Ghostmon.csproj
+++ b/Maple.Ghostmon/Maple.Ghostmon.csproj
@@ -67,6 +67,9 @@
 		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllHijackData\Maple.MonoGameAssistant.DllHijackData.csproj" />
 		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllHijackGenerator\Maple.MonoGameAssistant.DllHijackGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="GameModel\SystemCore\" />
+	</ItemGroup>
  
 
 
