--- a/Maple.Ghostmon/Maple.Ghostmon.csproj
+++ b/Maple.Ghostmon/Maple.Ghostmon.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -20,7 +20,7 @@
 		<EventSourceSupport>false</EventSourceSupport>
 		<InvariantGlobalization>true</InvariantGlobalization>
 		<MetadataUpdaterSupport>false</MetadataUpdaterSupport>
-		<StackTraceSupport>false</StackTraceSupport>
+		<!--<StackTraceSupport>false</StackTraceSupport>-->
 		<UseSystemResourceKeys>true</UseSystemResourceKeys>
 
 
