--- a/Maple.Ghostmon/Maple.Ghostmon.csproj
+++ b/Maple.Ghostmon/Maple.Ghostmon.csproj
@@ -10,7 +10,7 @@
 		<PublishAot>true</PublishAot>
 		<IsAotCompatible>true</IsAotCompatible>
 		<OutputType>Library</OutputType>
-		<AssemblyName>winhttp</AssemblyName>
+		<AssemblyName>Maple</AssemblyName>
 
 
 		<DebuggerSupport>false</DebuggerSupport>
@@ -20,7 +20,7 @@
 		<EventSourceSupport>false</EventSourceSupport>
 		<InvariantGlobalization>true</InvariantGlobalization>
 		<MetadataUpdaterSupport>false</MetadataUpdaterSupport>
-		<!--<StackTraceSupport>false</StackTraceSupport>-->
+		<StackTraceSupport>false</StackTraceSupport>
 		<UseSystemResourceKeys>true</UseSystemResourceKeys>
 
 
@@ -30,47 +30,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="GameModel\UniTask\ConfigDataStore._GetMonsterConfig_d__13.cs" />
-	  <Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.CompilerServices.AsyncUniTask_TStateMachine,T_.cs" />
-	  <Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTask.Awaiter_MonsterObject_.cs" />
-
-	  <Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTaskCompletionSourceCore_T_.cs" />
-	
-	
-	  <Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTask_MonsterObject_.cs" />
-	</ItemGroup>
-
- 
-
-
-
-
-	<ItemGroup>
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.GameContext\Maple.GameContext.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.Core\Maple.MonoGameAssistant.Core.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.GameDTO\Maple.MonoGameAssistant.GameDTO.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.HotKey\Maple.MonoGameAssistant.HotKey.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.Logger\Maple.MonoGameAssistant.Logger.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.UnityCore\Maple.MonoGameAssistant.UnityCore.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.WebApi\Maple.MonoGameAssistant.WebApi.csproj" />
-	</ItemGroup>
-
-
-	<ItemGroup>
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.MonoCollectorDataV2\Maple.MonoGameAssistant.MonoCollectorDataV2.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.MonoCollector\Maple.MonoGameAssistant.MonoCollector.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.MonoCollectorGeneratorV2\Maple.MonoGameAssistant.MonoCollectorGeneratorV2.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+		<Compile Remove="GameModel\UniTask\ConfigDataStore._GetMonsterConfig_d__13.cs" />
+		<Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.CompilerServices.AsyncUniTask_TStateMachine,T_.cs" />
+		<Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTask.Awaiter_MonsterObject_.cs" />
+		<Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTaskCompletionSourceCore_T_.cs" />
+		<Compile Remove="GameModel\UniTask\Cysharp.Threading.Tasks.UniTask_MonsterObject_.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllExportTmp\DllExport.cs" Link="GameDllExport\DllExport.cs" />
-		<AdditionalFiles Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllExportTmp\WinHttp.Api" Link="GameDllExport\WinHttp.Api" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllHijackData\Maple.MonoGameAssistant.DllHijackData.csproj" />
-		<ProjectReference Include="..\..\Maple.MonoGameAssistant\Maple.MonoGameAssistant.DllHijackGenerator\Maple.MonoGameAssistant.DllHijackGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+		<Folder Include="GameModel\SystemCore\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="GameModel\SystemCore\" />
+		<PackageReference Include="Maple.MonoGameAssistant.GameContext" Version="1.0.0-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorDataV2" Version="1.0.1-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorGeneratorV2" Version="1.0.2-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.WebApi" Version="1.0.1-rc" />
+	 
 	</ItemGroup>
- 
+
 
 
 
