--- a/Maple.Ghostmon.Metadata/Maple.Ghostmon.Metadata.csproj
+++ b/Maple.Ghostmon.Metadata/Maple.Ghostmon.Metadata.csproj
@@ -15,11 +15,13 @@
 		<Compile Remove="MetadataModel\UniTask\Cysharp.Threading.Tasks.UniTask_MonsterObject_.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Maple.MonoGameAssistant.Core" Version="1.2.0-rc" />
-		<PackageReference Include="Maple.MonoGameAssistant.GameDTO" Version="1.2.0-rc" />
-		<PackageReference Include="Maple.MonoGameAssistant.MonoCollector" Version="1.2.1-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.Core" Version="1.3.1-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.GameDTO" Version="1.3.0-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorExtensions" Version="1.3.1-rc" />
+		<!--<PackageReference Include="Maple.MonoGameAssistant.MonoCollector" Version="1.2.1-rc" />
 		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorDataV2" Version="1.2.0-rc" />
-		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorGeneratorV2" Version="1.2.0-rc" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-		<PackageReference Include="Maple.MonoGameAssistant.UnityCore" Version="1.2.0-rc" />
+		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorGeneratorV2" Version="1.2.0-rc" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+		<PackageReference Include="Maple.MonoGameAssistant.MonoCollectorGenerator" Version="1.3.1-rc" OutputItemType="Analyzer" ReferenceOutputAssembly="false" /> 
+		<PackageReference Include="Maple.MonoGameAssistant.UnityCore" Version="1.3.0-rc" />
 	</ItemGroup>
 </Project>
