--- a/Maple.Ghostmon.Metadata/Maple.Ghostmon.Metadata.csproj
+++ b/Maple.Ghostmon.Metadata/Maple.Ghostmon.Metadata.csproj
@@ -26,5 +26,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="RogueMetadata\" />
+	  <Folder Include="AVGMetadata\" />
 	</ItemGroup>
 </Project>
